fixed new applications component alignment

--- a/client/src/components/dashboard/maindashboard/widgets/_widget-applications.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-applications.scss
@@ -56,7 +56,8 @@
     border-radius: 8px;
     width: 80%;
     height: 50%;
-    margin-right: 20px;
+    margin-top: -20px;
+    margin-right: 28px;
   }
 }
 
